[VFS-385] Add HTTP status code to HTTP file provider exception messages when available.
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/vfs/trunk@1203475 13f79535-47bb-0310-9956-ffa450edef68